# zemacs

./: .gitignore  .gitmodules  ATTRIBUTION.md  CHANGELOG.md  Cargo.toml  FAQ.md  README.md  SCRIPTING_EMBED_PLAN.md  building-from-source.html  command-line.html  commands.html  configuration.html  default.nix  ecosystem.html  editor.html  flake.nix  from-vim.html  grammars.nix  index.html  install.html  jumplist.html  keymap.html  lang-support.html  languages.html  languages.toml  lsp.html  other-software.html  package-managers.html  package.json  pickers.html  print.html  registers.html  remapping.html  scripting.html  searcher-09f2665d.js  searchindex-71233b28.js  surround.html  syntax-aware-motions.html  textobjects.html  themes.html  (+2 more)
.cargo/: config.toml
.github/: FUNDING.yml
book/: book.toml
completions/: _zemacs
contrib/: Zemacs.appdata.xml  Zemacs.desktop  Zmax.appdata.xml  Zmax.desktop  hx_launcher.sh
docs/: CONTRIBUTING.md  IDE_PREFERENCES_PLAN.md  LANGUAGE_INJECTION.md  PACKAGES.md  architecture.md  index.html  keybinding_report.html  keybinding_report.md  port_report.html  port_report.md  releases.md  report.html  vim_options_build_map.md  vision.md
guides/: adding_languages.html  highlights.html  indent.html  index.html  injection.html  locals.html  rainbow_bracket_queries.html  tags.html  textobject.html
helix-loader/: build.rs
helix-term/: Cargo.toml
main/: 404.html  building-from-source.html  command-line.html  commands.html  configuration.html  ecosystem.html  editor.html  from-vim.html  index.html  install.html  jumplist.html  keymap.html  lang-support.html  languages.html  lsp.html  other-software.html  package-managers.html  pickers.html  print.html  registers.html  remapping.html  scripting.html  searcher-09f2665d.js  searchindex-0069860d.js  searchindex-0112d76e.js  searchindex-01a44280.js  searchindex-03274263.js  searchindex-0388c387.js  searchindex-042aba4d.js  searchindex-05c1af52.js  searchindex-069fe036.js  searchindex-07b7234d.js  searchindex-086184a1.js  searchindex-08731ef4.js  searchindex-0a877a26.js  searchindex-0abab6a7.js  searchindex-0d74f7ad.js  searchindex-0e875fe5.js  searchindex-0ea0c7f0.js  searchindex-1022be6a.js  (+211 more)
port/: README.md  mapping.json
runtime/: tutor
scratchpad/: spc_gaps_detail.txt
scripts/: gen_dunnet_data.py  gen_port_report.py  install.sh  release.sh
target-zport/: .rustc_info.json
v0.1.0/: building-from-source.html  command-line.html  commands.html  configuration.html  from-vim.html  jumplist.html  keymap.html  other-software.html  package-managers.html  pickers.html  registers.html  searchindex-d84bda58.js  syntax-aware-motions.html  textobjects.html  toc-5c17ed36.js  toc.html  usage.html
v0.2.11/: searcher-09f2665d.js  searchindex-209278b8.js  usage.html
v0.2.18/: command-line.html  editor.html  from-vim.html  pickers.html  registers.html  scripting.html  searcher-09f2665d.js  searchindex-77eb7a7b.js  surround.html  title-page.html  usage.html
v0.2.3/: package-managers.html
v0.2.4/: commands.html  from-vim.html  jumplist.html  keymap.html  lang-support.html  package-managers.html  syntax-aware-motions.html  themes.html  workspace-trust.html
v0.4.27/: building-from-source.html  command-line.html  configuration.html  ecosystem.html  lang-support.html  lsp.html  print.html  textobjects.html  title-page.html  usage.html  workspace-trust.html
v0.4.28/: editor.html  from-vim.html  languages.html  remapping.html  scripting.html  surround.html  syntax-aware-motions.html
v0.4.8/: command-line.html  index.html  keymap.html  languages.html  lsp.html  registers.html  remapping.html  scripting.html  searchindex-b46904c2.js  syntax-aware-motions.html  themes.html  workspace-trust.html
v0.4.9/: commands.html  (+12 more)
xtask/: Cargo.toml
xtask/src/: docgen.rs  helpers.rs  main.rs
zemacs-viml/: Cargo.toml
zemacs-viml/src/: errors.rs  list.rs
zmax-dap/: Cargo.toml
zmax-dap/src/: client.rs  gud_view.rs  lib.rs  registry.rs
zmax-lsp/: Cargo.toml
zmax-lsp/src/: client.rs  lib.rs  transport.rs
zmax-native/examples/: Cargo.toml  README.md
zmax-native/examples/banner/: Cargo.toml
zmax-native/examples/banner/src/: lib.rs
zmax-native/examples/buffer-stats/: Cargo.toml
zmax-native/examples/buffer-stats/src/: lib.rs
zmax-native/examples/hello-plugin/: Cargo.toml
zmax-native/examples/hello-plugin/src/: lib.rs
zmax-native/examples/insert-date/: Cargo.toml
zmax-native/examples/insert-date/src/: lib.rs
zmax-native/examples/trim-trailing/: Cargo.toml
zmax-native/examples/trim-trailing/src/: lib.rs
(+1005 files in other folders)
