[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zemacs-term = { path = "../zemacs-term" }
zemacs-core = { path = "../zemacs-core" }
zemacs-view = { path = "../zemacs-view" }
zemacs-loader = { path = "../zemacs-loader" }
zemacs-stdx = { path = "../zemacs-stdx" }
ropey.workspace = true
toml.workspace = true
