[package]
name = "xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmax-term = { path = "../zmax-term" }
zmax-core = { path = "../zmax-core" }
zmax-view = { path = "../zmax-view" }
zmax-loader = { path = "../zmax-loader" }
zmax-stdx = { path = "../zmax-stdx" }
ropey.workspace = true
toml.workspace = true
