[package]
name = "zmax-lsp"
description = "LSP client implementation for Zmax project"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmax-stdx = { path = "../zmax-stdx" }
zmax-core = { path = "../zmax-core" }
zmax-loader = { path = "../zmax-loader" }
zmax-lsp-types = { path = "../zmax-lsp-types" }

anyhow = "1.0"
futures-executor.workspace = true
futures-util.workspace = true
globset.workspace = true
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot", "sync"] }
tokio-stream.workspace = true
parking_lot.workspace = true
arc-swap = "1"
slotmap.workspace = true
thiserror.workspace = true
sonic-rs.workspace = true
