# Example native zmax plugins. Kept as its own workspace (separate from the zmax
# root workspace) so cargo treats each crate as an ordinary downstream consumer
# of the `zmax-native` SDK — exactly how a third-party plugin author's crate
# would look — while still sharing one `target/` dir so `cargo build` here builds
# every example at once.
[workspace]
resolver = "2"
members = [
  "hello-plugin",
  "insert-date",
  "buffer-stats",
  "trim-trailing",
  "banner",
]

[workspace.dependencies]
zmax-native = { path = ".." }
